fixes alignment on URL label

--- a/src/client/tracking/add-tray.scss
+++ b/src/client/tracking/add-tray.scss
@@ -38,6 +38,7 @@
 
     @include respond-to(tablet, desktop) {
       display: flex;
+      align-items: baseline;
 
       input {
         flex-grow: 1;
